--- a/_profiles/default.html
+++ b/_profiles/default.html
@@ -3,7 +3,7 @@
 # The human-friendly name of the profile. Whenever you're asked for the profile
 # ID, it refers to the name of the profile file — in this case, "default".
 #
-name: "My website"
+name: "uat1mx_ae_en_home"
 
 #
 # The default profile will be the one shown when accessing the root URL of your
@@ -26,9 +26,9 @@ interval: 12
 #
 parameters:
   connectivity: "Cable"
-  location: "Dulles:Chrome"
+  location: "Dubai:Chrome"
   runs: 1
-  url: "https://my-website.com"
+  url: "https://lms.in:Webteam!@uat1.maxfashion.com/ae/en"
 
 #
 # The URL of the WebPageTest instance to be used with this profile. Please note that
