--- a/_profiles/default.html
+++ b/_profiles/default.html
@@ -28,7 +28,7 @@ parameters:
   connectivity: "Cable"
   location: "Dubai:Chrome"
   runs: 1
-  url: "https://lms.in:Webteam!@uat1.maxfashion.com/ae/en"
+  url: "https://lms.com:Webteam!@uat1.maxfashion.com/ae/en"
 
 #
 # The URL of the WebPageTest instance to be used with this profile. Please note that
